objects/grax__GRAXSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>GRAX by Harding Point Settings. https://grax.io</description>
    <fields>
        <fullName>grax__Cloud_Platform_Server__c</fullName>
        <description>Cloud Platform Server Name</description>
        <inlineHelpText>Cloud Platform Server Name</inlineHelpText>
        <label>Cloud Platform Server</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax__EnableDeleteTab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Delete Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>grax__EnableObjectTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show File Objects for Bulk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>grax__GRAX_API_Url__c</fullName>
        <label>GRAX API Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>grax__GRAX_Cloud_Path__c</fullName>
        <label>GRAX Cloud Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax__GRAX_Flow_URL__c</fullName>
        <label>GRAX Flow URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>grax__HerokuAuthorizedUserId__c</fullName>
        <label>Heroku Authorized User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax__Heroku_App_Name__c</fullName>
        <description>Heroku Application Name</description>
        <inlineHelpText>Heroku Application Name</inlineHelpText>
        <label>Heroku App Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax__LastSendArchivedRecordsToGRAX__c</fullName>
        <description>The last date, and, time, when &quot;GRAXBatchToSetAsArchivedDeletedData&quot; APEX Class&apos; process, succesfully ran, sending archived records, to GRAX.</description>
        <label>LastSendArchivedRecordsToGRAX</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>grax__LastUpdateAsyncBackedUpRecords__c</fullName>
        <description>The last date, and, time, when &quot;GRAXBatchToUpdateAsyncBackedUpRecords&quot; APEX Class&apos; process, succesfully ran, identifying Async Objects records that were correctly backed-up, in GRAX.</description>
        <label>LastUpdateAsyncBackedUpRecords</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>grax__LogAllErrors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LogAllErrors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>grax__MaxNumberOfBulkGSPRunning__c</fullName>
        <defaultValue>5</defaultValue>
        <description>This value will be used to set the maximum number jobs using the bulk api that can be running at same time</description>
        <inlineHelpText>This value will be used to set the maximum number jobs using the bulk api that can be running at same time</inlineHelpText>
        <label>MaxNumberOfBulkGSPRunning</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax__MaxNumberOfRecordsPerPayload__c</fullName>
        <description>This value will be used to set the maximum number of records sent to GRAX in a single Payload. Values could be: 1, 2, 5, 10, 20, 25, 50, 100, 200, 400, 500, 1000, 2000</description>
        <inlineHelpText>This value will be used to set the maximum number of records sent to GRAX in a single Payload. Values could be: 1, 2, 5, 10, 20, 25, 50, 100, 200, 400, 500, 1000, 2000</inlineHelpText>
        <label>MaxNumberOfRecordsPerPayload</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax__ShowSalesforceSidebar__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If false, the Salesforce&apos;s sidebar will be hidden. If true, the Salesforce&apos;s sidebar will show up. This is a workaround for customers having issues with the &quot;GRAX&quot; Application&apos;s Setup page&apos;s performance, when the Salesforce&apos;s sidebar is present.</description>
        <label>Show Salesforce Sidebar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>grax__Use_Bulk_API__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Bulk API</label>
        <type>Checkbox</type>
    </fields>
    <label>GRAX Settings</label>
</CustomObject>